Fix service wrap when screen size is small

--- a/src/components/Work.css
+++ b/src/components/Work.css
@@ -1,16 +1,17 @@
 .Work {
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
   padding-bottom: 20px;
 }
 
 .Work>.preview-image {
-  display: inline-block;
+  display: flex;
   background: #333;
   height: 250px;
   width: 250px;
   overflow: hidden;
-  vertical-align: top;
+  justify-content: center;
 }
 
 .Work>.preview-image>img {
